home screen spacing issue fix

--- a/src/components/home/style.module.css
+++ b/src/components/home/style.module.css
@@ -144,6 +144,7 @@
   width: 100%;
 
 }
+
 .banner-content {
   position: absolute;
   top: 50px;
@@ -895,12 +896,12 @@
 }
 
 .home-carousel {
-  padding: 4rem 0;
+  padding: 1rem 0;
 
 }
 
 .home-wow {
-  padding: 4rem 0;
+  padding: 1rem 0;
 
 }
 
@@ -974,6 +975,7 @@
   .full-video {
     margin-top: 0px;
   }
+
   .largeText {
     font-size: 30px;
   }
@@ -983,15 +985,17 @@
 
 @media (min-width: 1025px) {
 
-.banner-video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Ensures the video covers the container */
-  transform: translate(-50%, -50%); /* Centers the video */
-}
+  .banner-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* Ensures the video covers the container */
+    transform: translate(-50%, -50%);
+    /* Centers the video */
+  }
 
 }
 
